--- a/monday.html
+++ b/monday.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smartsheet Guide - Implementation Hub</title>
+    <title>Monday.com Guide - Implementation Hub</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,8 +26,8 @@
                 <a href="comparison.html">Compare</a>
                 <a href="demo.html">Live Demo</a>
                 <a href="asana.html">Asana</a>
-                <a href="monday.html">Monday.com</a>
-                <a href="smartsheet.html" class="active">Smartsheet</a>
+                <a href="monday.html" class="active">Monday.com</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </div>
         </div>
     </nav>
@@ -36,17 +36,17 @@
     <header class="hero">
         <div class="hero-content">
             <div class="hero-badge">
-                <span style="margin-right: 0.5rem;">📊</span>
-                Enterprise-Grade Solution
-                <span style="margin-left: 0.5rem;">📊</span>
+                <span style="margin-right: 0.5rem;">⭐</span>
+                Best Overall Choice
+                <span style="margin-left: 0.5rem;">⭐</span>
             </div>
             <h1 class="hero-title">
-                <span class="gradient-text">Smartsheet</span><br>
-                Enterprise Work Management Platform
+                <span class="gradient-text">Monday.com</span><br>
+                Visual Work Operating System
             </h1>
             <p class="hero-subtitle">
-                Powerful spreadsheet interface meets enterprise project management. 
-                Perfect for complex implementations with existing Smartsheet infrastructure.
+                Intuitive, colorful platform that teams love to use. 
+                Perfect balance of features, usability, and value for customer implementations.
             </p>
             <div class="hero-buttons">
                 <a href="#features" class="btn btn-primary btn-large">
@@ -67,50 +67,50 @@
         <section class="section">
             <div class="section-header">
                 <span class="section-badge">
-                    <span style="margin-right: 0.5rem;">📊</span>
+                    <span style="margin-right: 0.5rem;">⭐</span>
                     Platform Overview
                 </span>
-                <h2 class="section-title">Why Smartsheet?</h2>
+                <h2 class="section-title">Why Monday.com?</h2>
                 <p class="section-subtitle">
-                    Enterprise-grade work management with familiar spreadsheet interface
+                    The perfect blend of power, beauty, and ease of use
                 </p>
             </div>
 
             <div class="cards">
                 <div class="card">
-                    <div class="card-icon">📊</div>
-                    <h3>Familiar Interface</h3>
-                    <p>Excel-like grid interface your team already knows. Minimal learning curve with spreadsheet familiarity.</p>
+                    <div class="card-icon">🎨</div>
+                    <h3>Beautiful Interface</h3>
+                    <p>Colorful, visual design that teams actually enjoy using. High adoption rates with minimal training required.</p>
                 </div>
 
                 <div class="card">
-                    <div class="card-icon">🏢</div>
-                    <h3>Enterprise Ready</h3>
-                    <p>SOC 2, HIPAA, and GDPR compliant. Enterprise SSO, admin controls, and governance features built-in.</p>
+                    <div class="card-icon">⚡</div>
+                    <h3>Quick Setup</h3>
+                    <p>Get up and running in 1-2 weeks. Pre-built templates and intuitive drag-and-drop interface accelerate deployment.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">🎯</div>
+                    <h3>Custom Workflows</h3>
+                    <p>22+ column types let you track any data. Status, timeline, people, dropdown, formula columns adapt to your needs.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">🤖</div>
+                    <h3>Powerful Automation</h3>
+                    <p>No-code automation builder with 25,000 automation runs/month. Eliminate repetitive work instantly.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">📊</div>
+                    <h3>Rich Dashboards</h3>
+                    <p>Unlimited dashboards with 12+ widget types. Real-time charts, timelines, and metrics for stakeholders.</p>
                 </div>
 
                 <div class="card">
                     <div class="card-icon">🔗</div>
-                    <h3>Powerful Integration</h3>
-                    <p>Native integrations with Salesforce, Jira, ServiceNow, Microsoft, Google, and 100+ enterprise tools.</p>
-                </div>
-
-                <div class="card">
-                    <div class="card-icon">📈</div>
-                    <h3>Advanced Reporting</h3>
-                    <p>Dynamic dashboards with real-time charts, metrics, and roll-up reports across multiple sheets.</p>
-                </div>
-
-                <div class="card">
-                    <div class="card-icon">🔄</div>
-                    <h3>Workflow Automation</h3>
-                    <p>Complex multi-step workflows with approval chains, notifications, and conditional logic.</p>
-                </div>
-
-                <div class="card">
-                    <div class="card-icon">👥</div>
-                    <h3>Resource Management</h3>
-                    <p>Built-in resource allocation, capacity planning, and portfolio management capabilities.</p>
+                    <h3>Deep Integrations</h3>
+                    <p>Native connections to Slack, Teams, GitHub, Jira, Gmail. Two-way sync keeps all tools aligned.</p>
                 </div>
             </div>
         </section>
@@ -122,83 +122,83 @@
                     <span style="margin-right: 0.5rem;">💰</span>
                     Pricing
                 </span>
-                <h2 class="section-title">Enterprise Investment</h2>
+                <h2 class="section-title">Great Value for Features</h2>
             </div>
 
             <div class="platform-grid">
-                <div class="platform-card smartsheet-card">
+                <div class="platform-card monday-card">
                     <div class="platform-header">
-                        <h3>Business Plan</h3>
-                        <span class="badge">Small Teams</span>
-                    </div>
-                    <div class="platform-body">
-                        <div class="platform-stats">
-                            <div class="stat">
-                                <div class="stat-label">Cost</div>
-                                <div class="stat-value">$210/mo</div>
-                            </div>
-                            <div class="stat">
-                                <div class="stat-label">Users</div>
-                                <div class="stat-value">3-10 users</div>
-                            </div>
-                            <div class="stat">
-                                <div class="stat-label">Setup</div>
-                                <div class="stat-value">2-3 weeks</div>
-                            </div>
-                        </div>
-                        <p class="platform-description">
-                            $7/user/month minimum 3 users (billed annually). Good for small teams getting started with Smartsheet.
-                        </p>
-                        <ul class="feature-list">
-                            <li>Unlimited sheets and reports</li>
-                            <li>Grid, Gantt, Card, Calendar views</li>
-                            <li>Advanced formulas (200+ functions)</li>
-                            <li>Conditional formatting</li>
-                            <li>Forms and proofing</li>
-                            <li>Basic automation</li>
-                            <li>Document management</li>
-                            <li>Real-time collaboration</li>
-                            <li>Version history</li>
-                            <li>Mobile apps</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="platform-card smartsheet-card">
-                    <div class="platform-header">
-                        <h3>Enterprise Plan</h3>
+                        <h3>Pro Plan</h3>
                         <span class="badge">Recommended</span>
                     </div>
                     <div class="platform-body">
                         <div class="platform-stats">
                             <div class="stat">
                                 <div class="stat-label">Cost</div>
-                                <div class="stat-value">$350/mo</div>
+                                <div class="stat-value">$320/mo</div>
                             </div>
                             <div class="stat">
                                 <div class="stat-label">Users</div>
-                                <div class="stat-value">14 users</div>
+                                <div class="stat-value">17-20 users</div>
                             </div>
                             <div class="stat">
                                 <div class="stat-label">Setup</div>
-                                <div class="stat-value">2-3 weeks</div>
+                                <div class="stat-value">1-2 weeks</div>
                             </div>
                         </div>
                         <p class="platform-description">
-                            $25/user/month (billed annually). Perfect for teams of 15-25 managing customer implementations with enterprise features.
+                            $16-19/user/month (billed annually). Best for teams of 15-25 needing visual workflows and automation.
                         </p>
                         <ul class="feature-list">
-                            <li>All Business features</li>
-                            <li>Advanced workflows & automation</li>
-                            <li>Dynamic dashboards (unlimited widgets)</li>
-                            <li>Resource management</li>
-                            <li>Portfolio rollup views</li>
-                            <li>Enterprise integrations (Salesforce, Jira, ServiceNow)</li>
-                            <li>SOC 2, HIPAA, GDPR compliance</li>
-                            <li>SSO & SAML authentication</li>
-                            <li>Advanced admin controls</li>
-                            <li>API access</li>
-                            <li>Dedicated support</li>
+                            <li>Unlimited boards</li>
+                            <li>Timeline, Gantt, Calendar views</li>
+                            <li>25,000 automation runs/month</li>
+                            <li>Unlimited dashboards</li>
+                            <li>Time tracking</li>
+                            <li>Formula columns</li>
+                            <li>Chart & workload views</li>
+                            <li>Agile reporting</li>
+                            <li>Private boards</li>
+                            <li>24/7 support</li>
+                            <li>All integrations</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="platform-card monday-card">
+                    <div class="platform-header">
+                        <h3>Enterprise Plan</h3>
+                        <span class="badge">For Scale</span>
+                    </div>
+                    <div class="platform-body">
+                        <div class="platform-stats">
+                            <div class="stat">
+                                <div class="stat-label">Cost</div>
+                                <div class="stat-value">Custom</div>
+                            </div>
+                            <div class="stat">
+                                <div class="stat-label">Users</div>
+                                <div class="stat-value">50+</div>
+                            </div>
+                            <div class="stat">
+                                <div class="stat-label">Setup</div>
+                                <div class="stat-value">4-6 weeks</div>
+                            </div>
+                        </div>
+                        <p class="platform-description">
+                            Contact sales for pricing. For large organizations managing 100+ implementations with advanced security.
+                        </p>
+                        <ul class="feature-list">
+                            <li>All Pro features</li>
+                            <li>Advanced analytics</li>
+                            <li>Multi-level permissions</li>
+                            <li>Enterprise integrations</li>
+                            <li>Tailored onboarding</li>
+                            <li>Advanced reporting</li>
+                            <li>HIPAA compliance</li>
+                            <li>SSO & SAML</li>
+                            <li>Dedicated account manager</li>
+                            <li>99.9% uptime SLA</li>
                         </ul>
                     </div>
                 </div>
@@ -214,27 +214,27 @@
 
             <div class="cards">
                 <div class="card">
-                    <div class="card-icon">🏢</div>
-                    <h3>Enterprise Organizations</h3>
-                    <p>Already using Smartsheet for other processes? Perfect fit for implementation tracking with existing infrastructure.</p>
+                    <div class="card-icon">⭐</div>
+                    <h3>Team Adoption Priority</h3>
+                    <p>Beautiful interface means high user adoption. Teams actually want to use Monday.com, reducing resistance and training time.</p>
                 </div>
 
                 <div class="card">
-                    <div class="card-icon">🔐</div>
-                    <h3>Regulated Industries</h3>
-                    <p>Healthcare, finance, or other industries requiring SOC 2, HIPAA, or GDPR compliance with advanced security controls.</p>
+                    <div class="card-icon">🎯</div>
+                    <h3>Visual Workflows</h3>
+                    <p>Color-coded status columns make progress instantly visible. Perfect for stakeholder updates and executive visibility.</p>
                 </div>
 
                 <div class="card">
-                    <div class="card-icon">🔗</div>
-                    <h3>Complex Integrations</h3>
-                    <p>Need deep integration with Salesforce, ServiceNow, or other enterprise tools? Smartsheet offers robust native connectors.</p>
+                    <div class="card-icon">⚡</div>
+                    <h3>Fast Implementation</h3>
+                    <p>Need to track implementations quickly? 1-2 week setup gets you operational fast with minimal disruption.</p>
                 </div>
 
                 <div class="card">
-                    <div class="card-icon">📊</div>
-                    <h3>Executive Reporting</h3>
-                    <p>Leadership needs sophisticated dashboards with portfolio views, resource utilization, and executive-level KPIs.</p>
+                    <div class="card-icon">🔄</div>
+                    <h3>Automation Needs</h3>
+                    <p>Eliminate manual updates with powerful no-code automations. Status changes, notifications, and assignments happen automatically.</p>
                 </div>
             </div>
         </section>
@@ -253,24 +253,24 @@
                         <div class="comparison-cell">Considerations</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Familiar spreadsheet interface</div>
-                        <div class="comparison-cell">⚠️ Highest cost at $350/month</div>
+                        <div class="comparison-cell">✅ Beautiful, intuitive interface</div>
+                        <div class="comparison-cell">⚠️ Mid-tier pricing at $320/month</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Enterprise security & compliance</div>
-                        <div class="comparison-cell">⚠️ Advanced features have learning curve</div>
+                        <div class="comparison-cell">✅ Fastest setup time (1-2 weeks)</div>
+                        <div class="comparison-cell">⚠️ Automation runs have monthly limits</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Native Salesforce & Jira integration</div>
-                        <div class="comparison-cell">⚠️ Setup takes longer (2-3 weeks)</div>
+                        <div class="comparison-cell">✅ Highest team adoption rate</div>
+                        <div class="comparison-cell">⚠️ Can get expensive as team grows</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Advanced reporting & dashboards</div>
-                        <div class="comparison-cell">⚠️ Mobile app less intuitive</div>
+                        <div class="comparison-cell">✅ Powerful no-code automation</div>
+                        <div class="comparison-cell">⚠️ Fewer compliance features than Smartsheet</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Built-in resource management</div>
-                        <div class="comparison-cell">⚠️ Can become complex at scale</div>
+                        <div class="comparison-cell">✅ Excellent visual dashboards</div>
+                        <div class="comparison-cell">⚠️ Complex formulas less powerful</div>
                     </div>
                 </div>
             </div>
@@ -279,13 +279,13 @@
         <!-- CTA Section -->
         <section class="section cta-section">
             <div class="cta-card">
-                <h2>Ready to Implement Smartsheet?</h2>
+                <h2>Ready to Implement Monday.com?</h2>
                 <p>
-                    Download our complete setup guide with templates, formulas, and best practices 
-                    for customer implementation tracking.
+                    Download our complete setup guide with board templates, automation recipes, 
+                    and best practices for customer implementation tracking.
                 </p>
                 <div class="cta-buttons">
-                    <a href="smartsheet_setup_guide.md" class="btn btn-primary btn-large" download>
+                    <a href="monday_setup_guide.md" class="btn btn-primary btn-large" download>
                         Download Setup Guide
                     </a>
                     <a href="comparison.html" class="btn btn-secondary btn-large">
