--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Implementation Hub - Customer Success Platform Comparison</title>
+    <title>Implementation Hub - Client Success Platform Comparison</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -43,11 +43,11 @@
             </div>
             <h1 class="hero-title">
                 Choose the Perfect Platform for<br>
-                <span class="gradient-text">Customer Implementations</span>
+                <span class="gradient-text">Client Implementations</span>
             </h1>
             <p class="hero-subtitle">
                 Compare Asana, Monday.com, and Smartsheet with interactive demos, detailed guides, 
-                and expert recommendations tailored for customer success teams.
+                and expert recommendations tailored for client success teams.
             </p>
             <div class="hero-buttons">
                 <a href="demo.html" class="btn btn-primary btn-large">
@@ -116,11 +116,11 @@
                         <h3>Real Working Kanban Board</h3>
                         <p style="color: var(--gray-600); font-size: 1.05rem; margin-bottom: 2rem; line-height: 1.7;">
                             Our interactive demo lets you experience implementation tracking firsthand. 
-                            Drag tasks, filter customers, and watch statistics update in real-time.
+                            Drag tasks, filter clients, and watch statistics update in real-time.
                         </p>
                         <ul class="feature-checklist">
                             <li>🎯 Drag & drop 12 implementation tasks</li>
-                            <li>🔍 Filter by 4 different customers</li>
+                            <li>🔍 Filter by 4 different clients</li>
                             <li>📊 Watch live statistics update</li>
                             <li>✨ Experience smooth animations</li>
                             <li>📱 Works perfectly on mobile</li>
@@ -139,7 +139,7 @@
                 <span class="section-badge">🎯 Platform Comparison</span>
                 <h2 class="section-title">Choose Your Implementation Tool</h2>
                 <p class="section-subtitle">
-                    Expert analysis of the top 3 platforms for customer success teams
+                    Expert analysis of the top 3 platforms for client success teams
                 </p>
             </div>
 
@@ -395,8 +395,8 @@
                 <span class="brand-text">Implementation Hub</span>
             </div>
             <p class="footer-text">
-                The complete guide to choosing and implementing customer success platforms.
-                Created for engagement managers and customer success teams.
+                The complete guide to choosing and implementing client success platforms.
+                Created for engagement managers and client success teams.
             </p>
             <p class="footer-links">
                 <a href="index.html">Home</a>
@@ -407,7 +407,7 @@
                 <a href="smartsheet.html">Smartsheet</a>
             </p>
             <p class="footer-copyright">
-                © 2025 Implementation Hub Guide | Built for Customer Success Teams
+                © 2025 Implementation Hub Guide | Built for Client Success Teams
             </p>
         </div>
     </footer>
