--- a/monday.html
+++ b/monday.html
@@ -64,7 +64,7 @@
     <!-- Main Content -->
     <main class="container">
         <!-- Overview Section -->
-        <section class="section">
+        <section id="features" class="section">
             <div class="section-header">
                 <span class="section-badge">
                     <span style="margin-right: 0.5rem;">⭐</span>
@@ -116,7 +116,7 @@
         </section>
 
         <!-- Pricing Section -->
-        <section class="section">
+        <section id="setup" class="section">
             <div class="section-header">
                 <span class="section-badge">
                     <span style="margin-right: 0.5rem;">💰</span>
