--- a/smartsheet.html
+++ b/smartsheet.html
@@ -64,7 +64,7 @@
     <!-- Main Content -->
     <main class="container">
         <!-- Overview Section -->
-        <section class="section">
+        <section id="features" class="section">
             <div class="section-header">
                 <span class="section-badge">
                     <span style="margin-right: 0.5rem;">📊</span>
@@ -116,7 +116,7 @@
         </section>
 
         <!-- Pricing Section -->
-        <section class="section">
+        <section id="setup" class="section">
             <div class="section-header">
                 <span class="section-badge">
                     <span style="margin-right: 0.5rem;">💰</span>
@@ -254,23 +254,23 @@
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell">✅ Familiar spreadsheet interface</div>
-                        <div class="comparison-cell">⚠️ Higher cost than alternatives ($350/mo)</div>
+                        <div class="comparison-cell">⚠️ Highest cost at $350/month</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Enterprise-grade security & compliance</div>
-                        <div class="comparison-cell">⚠️ Steeper learning curve for advanced features</div>
+                        <div class="comparison-cell">✅ Enterprise security & compliance</div>
+                        <div class="comparison-cell">⚠️ Advanced features have learning curve</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Powerful integration ecosystem</div>
-                        <div class="comparison-cell">⚠️ Can become complex at scale</div>
+                        <div class="comparison-cell">✅ Native Salesforce & Jira integration</div>
+                        <div class="comparison-cell">⚠️ Setup takes longer (2-3 weeks)</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell">✅ Advanced reporting & dashboards</div>
-                        <div class="comparison-cell">⚠️ Mobile experience less polished</div>
+                        <div class="comparison-cell">⚠️ Mobile app less intuitive</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Excellent resource management</div>
-                        <div class="comparison-cell">⚠️ Requires more setup time than Monday.com</div>
+                        <div class="comparison-cell">✅ Built-in resource management</div>
+                        <div class="comparison-cell">⚠️ Can become complex at scale</div>
                     </div>
                 </div>
             </div>
