--- a/monday.html
+++ b/monday.html
@@ -49,9 +49,9 @@
                 Perfect balance of features, usability, and value for customer implementations.
             </p>
             <div class="hero-buttons">
-                <a href="#features" class="btn btn-primary btn-large">
-                    <span>📋</span>
-                    View Features
+                <a href="https://monday.com/pricing" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-large">
+                    <span>💰</span>
+                    View Pricing Plans
                 </a>
                 <a href="#setup" class="btn btn-secondary btn-large">
                     <span>🚀</span>
