--- a/asana.html
+++ b/asana.html
@@ -237,6 +237,101 @@
             </div>
         </section>
 
+        <!-- Microsoft Integration Section -->
+        <section class="section">
+            <div class="section-header">
+                <span class="section-badge">🔗 Microsoft Office Integration</span>
+                <h2 class="section-title">Best Overall Microsoft Ecosystem Integration</h2>
+                <p class="section-subtitle">
+                    Most comprehensive Microsoft integration with free features on all plans
+                </p>
+            </div>
+
+            <div class="cards">
+                <div class="card">
+                    <div class="card-icon">📧</div>
+                    <h3>Outlook Integration</h3>
+                    <p><strong>FREE on all plans!</strong> Convert emails to tasks instantly. Free Outlook add-in with full functionality. Works with Outlook Web App and Office 2016+.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">👥</div>
+                    <h3>Microsoft Teams</h3>
+                    <p>Native Teams integration. Add projects to channels, create tasks from conversations, get real-time updates. Access Asana AI in Microsoft Copilot.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">☁️</div>
+                    <h3>OneDrive & SharePoint</h3>
+                    <p>Attach OneDrive and SharePoint files directly to tasks. Files stay synced with latest versions. Seamless document collaboration.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">📅</div>
+                    <h3>Calendar Sync</h3>
+                    <p>Sync task deadlines to Outlook calendar automatically. Create tasks from calendar events. Timeline visibility in Outlook.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">🔐</div>
+                    <h3>Azure AD SSO</h3>
+                    <p>Enterprise SAML-based Single Sign-On. User provisioning with SCIM. Role-based access control. Centralized authentication.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">⚡</div>
+                    <h3>Power Automate</h3>
+                    <p>Build custom workflows between Asana and Office 365. Automated task creation. Forms-to-tasks automation. Complex conditional workflows.</p>
+                </div>
+            </div>
+
+            <div class="comparison-quick" style="margin-top: 2rem;">
+                <div class="comparison-table-modern">
+                    <div class="comparison-row header-row">
+                        <div class="comparison-cell">Integration Feature</div>
+                        <div class="comparison-cell">Details</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📧 <strong>Outlook Add-in</strong></div>
+                        <div class="comparison-cell">FREE on all plans including free tier</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">👥 <strong>Teams Integration</strong></div>
+                        <div class="comparison-cell">Native app with AI Copilot access</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">☁️ <strong>OneDrive/SharePoint</strong></div>
+                        <div class="comparison-cell">Direct file attachment & sync</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">🔐 <strong>Azure AD SSO</strong></div>
+                        <div class="comparison-cell">Enterprise feature - SAML-based</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">⚡ <strong>Power Automate</strong></div>
+                        <div class="comparison-cell">Full workflow automation support</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">💰 <strong>Cost</strong></div>
+                        <div class="comparison-cell">FREE integration on all plans ⭐</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">⏱️ <strong>Setup Time</strong></div>
+                        <div class="comparison-cell">15-20 minutes (Easy)</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📋 <strong>Requirements</strong></div>
+                        <div class="comparison-cell">Office 365 Commercial subscription</div>
+                    </div>
+                </div>
+            </div>
+
+            <div style="margin-top: 2rem; padding: 1.5rem; background: linear-gradient(135deg, rgba(240, 106, 106, 0.1) 0%, rgba(240, 106, 106, 0.05) 100%); border-radius: 12px; border-left: 4px solid #f06a6a;">
+                <h3 style="margin-top: 0; color: #f06a6a;">🏆 Best Overall Microsoft Integration</h3>
+                <p style="margin-bottom: 0;"><strong>Why Asana leads:</strong> Most comprehensive Microsoft ecosystem coverage with FREE integration on all plans (including free tier). Native support for Teams, Outlook, OneDrive, SharePoint, Azure AD, and Power Automate. Easiest enterprise SSO setup. Best value for Microsoft-centric organizations.</p>
+            </div>
+        </section>
+
         <!-- Pros & Cons Section -->
         <section class="section">
             <div class="section-header">
