--- a/monday.html
+++ b/monday.html
@@ -239,6 +239,101 @@
             </div>
         </section>
 
+        <!-- Microsoft Integration Section -->
+        <section class="section">
+            <div class="section-header">
+                <span class="section-badge">🔗 Microsoft Office Integration</span>
+                <h2 class="section-title">Strong Visual Collaboration with Microsoft</h2>
+                <p class="section-subtitle">
+                    Excellent Outlook integration with beautiful visual interface for teams
+                </p>
+            </div>
+
+            <div class="cards">
+                <div class="card">
+                    <div class="card-icon">📧</div>
+                    <h3>Outlook Integration</h3>
+                    <p>Create monday.com items directly from Outlook emails. Bi-directional calendar sync. Email-to-task conversion. Outlook add-in available in marketplace.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">👥</div>
+                    <h3>Microsoft Teams</h3>
+                    <p>Get monday updates in Teams channels. Create items from Teams. Real-time notifications. Seamless collaboration within Teams.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">☁️</div>
+                    <h3>Office 365 Connector</h3>
+                    <p>Microsoft Office 365 Anywhere integration. Automated message sending. Contact syncing. Calendar event management.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">📅</div>
+                    <h3>Calendar Sync</h3>
+                    <p>Sync Outlook calendar events to monday boards. Automatic item creation when events are created. Bi-directional updates.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">👤</div>
+                    <h3>Contact Management</h3>
+                    <p>Sync Office 365 contacts with monday CRM. Auto-create items when new contacts are added. Seamless contact integration.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">⚡</div>
+                    <h3>Power Automate</h3>
+                    <p>Build custom workflows with Power Automate. 200+ automation templates via Zapier. No-code automation options available.</p>
+                </div>
+            </div>
+
+            <div class="comparison-quick" style="margin-top: 2rem;">
+                <div class="comparison-table-modern">
+                    <div class="comparison-row header-row">
+                        <div class="comparison-cell">Integration Feature</div>
+                        <div class="comparison-cell">Details</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📧 <strong>Outlook Integration</strong></div>
+                        <div class="comparison-cell">Native with bi-directional sync</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">👥 <strong>Teams Integration</strong></div>
+                        <div class="comparison-cell">Real-time updates & item creation</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">☁️ <strong>Office 365 Connector</strong></div>
+                        <div class="comparison-cell">Built-in marketplace app</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📅 <strong>Calendar Sync</strong></div>
+                        <div class="comparison-cell">Bi-directional event syncing</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">⚡ <strong>Automation</strong></div>
+                        <div class="comparison-cell">Power Automate + 200+ templates</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">💰 <strong>Cost</strong></div>
+                        <div class="comparison-cell">Included in paid plans</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">⏱️ <strong>Setup Time</strong></div>
+                        <div class="comparison-cell">10-15 minutes (Fastest)</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📋 <strong>Requirements</strong></div>
+                        <div class="comparison-cell">Microsoft 365 Business Premium</div>
+                    </div>
+                </div>
+            </div>
+
+            <div style="margin-top: 2rem; padding: 1.5rem; background: linear-gradient(135deg, rgba(255, 61, 87, 0.1) 0%, rgba(255, 61, 87, 0.05) 100%); border-radius: 12px; border-left: 4px solid #ff3d57;">
+                <h3 style="margin-top: 0; color: #ff3d57;">⭐ Best Visual Collaboration</h3>
+                <p style="margin-bottom: 0;"><strong>Why Monday.com excels:</strong> Fastest setup (10-15 minutes) with excellent Outlook integration and bi-directional calendar sync. Beautiful visual interface ensures high team adoption. Perfect for teams primarily using Outlook who need visual project management. Best for rapid deployment and quick wins.</p>
+            </div>
+        </section>
+
         <!-- Pros & Cons Section -->
         <section class="section">
             <div class="section-header">
